--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ a {
   margin-right: 10px;
   fill: currentColor;
 }
+
 /* ---------------------------------------Студия----------------------------------------------------- */
 /* Блок Герой */
 .hero {
@@ -228,6 +229,9 @@ a {
   background-color: var(--hero-btn-hover);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
+/* --------Модальное окно----------- */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -275,6 +279,45 @@ a {
 .modal-icon-close {
   fill: #000;
 }
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: var(--main-letter-spacing);
+  color: var(--title-text-color);
+}
+.modal-field-label {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
+}
+.modal-field input {
+  margin-top: 4px;
+  padding-left: 42px;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color var(--animation);
+}
+
+input:hover,
+input:focus {
+  border-color: var(--accent-color);
+}
+.icon {
+  transition: fill var(--animation);
+  pointer-events: none;
+}
+input:hover + .icon,
+input:focus + .icon {
+  fill: var(--accent-color);
+}
+
 /* Особености компании */
 .features {
   display: flex;
@@ -684,4 +727,67 @@ a {
 .footer-social-icon:hover,
 .footer-social-icon:focus {
   background-color: var(--accent-color);
+}
+.footer-subscribe {
+  display: block;
+  margin-left: 93px;
+}
+.footer-form-title {
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: var(--footer-logo-color);
+}
+.footer-form-container {
+  display: flex;
+}
+.footer-input {
+  width: 358px;
+  height: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  margin: 0;
+  padding: 15px 16px;
+  color: var(--p-text-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+}
+.footer-form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--btn-text-color);
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  transition: background-color 250ms var(--animation), filter var(--animation);
+}
+.footer-form-icon {
+  display: block;
+  margin-left: 10px;
+  fill: currentColor;
+}
+
+.footer-form-button:hover,
+.footer-form-button:focus {
+  background-color: var(--hero-btn-hover);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
