--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ a {
   position: absolute;
   min-width: 528px;
   min-height: 581px;
+  padding: 40px;
   background-color: var(--background-color);
   left: 50%;
   top: 50%;
@@ -264,26 +265,33 @@ a {
 
 .btn-modal {
   position: absolute;
+  cursor: pointer;
   top: 8px;
   right: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  background: var(--white_color);
+  background: var(--background-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   width: 30px;
   height: 30px;
   border-radius: 50%;
 }
+.btn-modal:hover .modal-icon-close,
+.btn-modal:focus .modal-icon-close {
+  fill: var(--accent-color);
+}
 .modal-icon-close {
   fill: #000;
+  transition: fill 250ms var(--animation);
 }
 .modal-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
+  margin-bottom: 12px;
   letter-spacing: var(--main-letter-spacing);
   color: var(--title-text-color);
 }
@@ -294,20 +302,22 @@ a {
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--main-text-color);
+  margin-bottom: 4px;
 }
 .modal-field input {
-  margin-top: 4px;
   padding-left: 42px;
+  margin-bottom: 10px;
   width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  transition: border-color var(--animation);
+  transition: border-color 250ms var(--animation);
 }
 
 input:hover,
 input:focus {
   border-color: var(--accent-color);
+  outline: none;
 }
 .icon {
   transition: fill var(--animation);
@@ -316,6 +326,106 @@ input:focus {
 input:hover + .icon,
 input:focus + .icon {
   fill: var(--accent-color);
+}
+.name-input,
+.tel-input,
+.mail-input {
+  position: relative;
+}
+.modal-name {
+  display: block;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+}
+.modal-phone {
+  display: block;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+}
+.modal-mail {
+  display: block;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+}
+.comentary {
+  resize: none;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border-color 250ms var(--animation);
+}
+.comentary:hover,
+.comentary:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+.comentary::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.policy {
+  margin-bottom: 30px;
+}
+.check-text {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: var(--main-letter-spacing);
+  color: var(--primary-text-color);
+}
+
+.check-text::before {
+  content: "";
+  cursor: pointer;
+  width: 16px;
+  height: 15px;
+  border: 1px solid var(--title-text-color);
+  border-radius: 3px;
+  margin-right: 8px;
+  color: var(--title-text-color);
+  transition: background-color 250ms var(--animation), border 250ms var(--animation), background-image 250ms var(--animation);
+}
+.input-check:checked + .check-text::before {
+  background-color: var(--accent-color);
+  border: none;
+  background-image: url(../img/icon\ check.svg);
+}
+.conditions {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+.form-button {
+  display: block;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--btn-text-color);
+  transition: backgorund-color 250ms var(--animation);
+}
+.form-button:hover,
+.form-button:focus {
+  background-color: var(--hero-btn-hover);
 }
 
 /* Особености компании */
