--- a/css/styles.css
+++ b/css/styles.css
@@ -304,10 +304,18 @@ a {
   color: var(--main-text-color);
   margin-bottom: 4px;
 }
+.modal-field {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.modal-field:last-child {
+  margin-bottom: 20px;
+}
+
 .modal-field input {
   padding-left: 42px;
-  margin-bottom: 10px;
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -351,10 +359,11 @@ input:focus + .icon {
   left: 12px;
 }
 .comentary {
+  display: block;
   resize: none;
   padding: 12px 16px;
   margin-bottom: 20px;
-  width: 448px;
+  width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
@@ -380,6 +389,7 @@ input:focus + .icon {
   display: flex;
   text-align: center;
   align-items: center;
+  justify-content: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: var(--main-letter-spacing);
